--- a/index.html
+++ b/index.html
@@ -79,31 +79,34 @@
                 </div> -->
             </div>
             <!-- homepage bonus box -->
-            <div class="award-container">
-                <div class="box" id="daily-checkin">
-                    <div class="bullet"></div>
-                    <div class="box-icon">
-                        <img src="images/Paomedia-Small-N-Flat-Calendar.svg" alt="Daily Checkin">
+            <div class="award-box-container">
+                <div class="award-container">
+                    <div class="box" id="daily-checkin">
+                        <div class="bullet"></div>
+                        <div class="box-icon">
+                            <img src="images/Paomedia-Small-N-Flat-Calendar.svg" alt="Daily Checkin">
+                        </div>
+                        <h2 class="daily-title"><a href="daily checkin.html">Daily Task</a></h2>
                     </div>
-                    <h2 class="daily-title"><a href="daily checkin.html">Daily Task</a></h2>
-                </div>
-                <div class="box" id="bonuses">
-                    <div class="bullet"></div>
-                    <div class="box-icon">
-                        <img src="images/gold-coin-leprechaun-money-gold-pot-374cc050e2deeac87ef03fa64241b726.png"
-                            style="width: 35px; height: 35px;" alt="Bonus">
+                    <div class="box" id="bonuses">
+                        <div class="bullet"></div>
+                        <div class="box-icon">
+                            <img src="images/gold-coin-leprechaun-money-gold-pot-374cc050e2deeac87ef03fa64241b726.png"
+                                style="width: 35px; height: 35px;" alt="Bonus">
+                        </div>
+                        <h2 class="daily-title"><a href="bonuses.html">Bonuses</a></h2>
                     </div>
-                    <h2 class="daily-title"><a href="bonuses.html">Bonuses</a></h2>
-                </div>
-                <div class="box" id="daily-meme">
-                    <div class="bullet"></div>
-                    <div class="box-icon">
-                        <img src="images/pngegg (6).png" style="width: 35px; height: 35px;" alt="Daily Meme">
+                    <div class="box" id="daily-meme">
+                        <div class="bullet"></div>
+                        <div class="box-icon">
+                            <img src="images/pngegg (6).png" style="width: 35px; height: 35px;" alt="Daily Meme">
+                        </div>
+                        <h2 class="daily-title"><a href="">Daily Meme</a></h2>
+                        <p>coming soon</p>
                     </div>
-                    <h2 class="daily-title"><a href="">Daily Meme</a></h2>
-                    <p>coming soon</p>
                 </div>
             </div>
+
             <!-- main-box -->
             <div class="main-box">
                 <!-- main-box-image -->
